--- a/posts/thoughts/2021/20210520.md
+++ b/posts/thoughts/2021/20210520.md
@@ -7,6 +7,7 @@ tags:
 collection: thoughts
 keys:
   - '6ca5d416fc0b15aeb90a4c15aa15c238'
+draft: true
 ---
 
 为什么别人总是能那么快乐，我总是没法快乐起来呢？是因为我太在意别人的想法？是我太喜欢和别人攀比？为什么不管做什么事情我都感觉自己像个局外人？哪怕这件事情是我主导的？
